poc/tests/errors/test_FplIdentifierAlreadyDeclared_namespace_usage.fpl
Fpl.Geometry.Euclidean
{
    uses Fpl.Commons.*, Fpl, Fpl.Test.Long.Namespace alias FplLong, Fpl

    theory
    {

    }
}

##############################

FplIdentifierAlreadyDeclared:3:71: Identifier Fpl already defined at (3,27)